crates/apollo-compiler/test_data/diagnostics/0027_interface_definition_with_undefined_implements_interface.txt
Error: cannot find type `Url` in this document
    ╭─[ 0027_interface_definition_with_undefined_implements_interface.graphql:11:39 ]
    │
 11 │ interface Image implements Resource & Url {
    │                                       ─┬─  
    │                                        ╰─── not found in this scope
────╯

